--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 # Code repository for array of Macquarie Island toothfish assessment and MSE code
-# Rich Hillary, Jemery Day @ CSIRO O & A
+# Rich Hillary, Jemery Day @ CSIRO Oceans & Atmosphere
