PBB gets a mention

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 # Code repository for array of Macquarie Island toothfish assessment and MSE code
-# Rich Hillary, Pia Bessel-Browne, & Jemery Day @ CSIRO
+# Rich Hillary, Pia Bessell-Browne, & Jemery Day @ CSIRO
